...
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="Enter product description (optional)"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/finishUpdatedProductButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />

    <EditText
        android:id="@+id/changeProductName"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/incQuantityButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/changeProductQuantity"
        app:layout_constraintEnd_toStartOf="@+id/decQuantityButton"
        app:layout_constraintHorizontal_bias="0.275"
...
